--- a/dessert.html
+++ b/dessert.html
@@ -20,7 +20,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Dessert/1.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -29,7 +29,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Dessert/2.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -38,7 +38,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Dessert/3.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -47,7 +47,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Dessert/4.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -56,7 +56,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Dessert/5.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -65,7 +65,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Dessert/6.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
