--- a/entree.html
+++ b/entree.html
@@ -18,7 +18,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-          <img src="menu/images/1.jpg" alt="not Found">
+          <img src="menu/Entree/1.jfif" alt="not Found">
           <p class="item-name">Pizza</p>
           <p id="item-price">Prix: 2500 FCFA</p>
       </section>
@@ -27,7 +27,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-          <img src="menu/images/1.jpg" alt="not Found">
+          <img src="menu/Entree/2.jpg" alt="not Found">
           <p class="item-name">Pizza</p>
           <p id="item-price">Prix: 2500 FCFA</p>
       </section>
@@ -36,7 +36,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-          <img src="menu/images/1.jpg" alt="not Found">
+          <img src="menu/Entree/3.jfif" alt="not Found">
           <p class="item-name">Pizza</p>
           <p id="item-price">Prix: 2500 FCFA</p>
       </section>
@@ -45,7 +45,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-          <img src="menu/images/1.jpg" alt="not Found">
+          <img src="menu/Entree/4.jpg" alt="not Found">
           <p class="item-name">Pizza</p>
           <p id="item-price">Prix: 2500 FCFA</p>
       </section>
@@ -54,7 +54,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-          <img src="menu/images/1.jpg" alt="not Found">
+          <img src="menu/Entree/5.jpeg" alt="not Found">
           <p class="item-name">Pizza</p>
           <p id="item-price">Prix: 2500 FCFA</p>
       </section>
@@ -63,7 +63,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-          <img src="menu/images/1.jpg" alt="not Found">
+          <img src="menu/Entree/6.jpeg" alt="not Found">
           <p class="item-name">Pizza</p>
           <p id="item-price">Prix: 2500 FCFA</p>
       </section>
