--- a/boissons.html
+++ b/boissons.html
@@ -13,14 +13,14 @@
 <body>
 
     <div class="tabs-1">
-        <h2 style="text-align: center;">Toutes les boissons</h2>
+        <h2 style="text-align: center;">Toutes les entrées</h2>
 
         <section class="item-card-menu">
             <!-- <section class="card-top">
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Boissons/1.jfif" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -29,7 +29,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Boissons/2.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -38,7 +38,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Boissons/3.webp" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -47,7 +47,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Boissons/4.jpg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -56,7 +56,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Boissons/5.jpeg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
@@ -65,7 +65,7 @@
               <i class="fa fa-star" id="rating"> 4.3</i>
               <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
           </section> -->
-            <img src="menu/images/1.jpg" alt="not Found">
+            <img src="menu/Boissons/6.jpeg" alt="not Found">
             <p class="item-name">Pizza</p>
             <p id="item-price">Prix: 2500 FCFA</p>
         </section>
