--- a/index.html
+++ b/index.html
@@ -199,7 +199,13 @@
 
 
             <div>
-                <h2>Bienvenue sur le menu</h2>
+
+          <section id="middle">
+                <h2 >Bienvenue sur le menu</h2>
+
+
+
+            
 
                 <section class="item-card">
 
@@ -221,15 +227,7 @@
 
                 </section>
 
-                <!-- <section class="item-card">
-                    <section class="card-top">
-                     <i class="fa fa-star" id="rating"> 4.3</i>
-                      <i class="fa fa-heart-o add-to-cart toggle-heart"></i>
-                    </section>
-                    <img src="menu/images/1.jpg" alt="not Found">
-                    <p class="item-name">Pizza</p>
-                    <p id="item-price">Prix: 2500 FCFA</p>
-                </section> -->
+            </section>
 
             </div>
 
