--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
         <div class="tab-indicator"></div>
 
-        <div class="tab-content">
+        <div class="tab-content" style="background-image: url('menu/restaurant/restaurant.png'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
 
             <div class="active">
 
-                <h2>Vous êtes dans l'espace de la gérante</h2>
+                <h2 style="color: white;">Vous êtes dans l'espace de la gérante</h2>
                 <section class="container">
 
-                    <span>
+                    <span >
                         Commandes :
                         02
                     </span>
@@ -200,34 +200,34 @@
 
             <div>
 
-          <section id="middle">
-                <h2 >Bienvenue sur le menu</h2>
+                <section id="middle" >
+                    <h2>Bienvenue sur le menu</h2>
 
 
+                    <section class="item-card"
+                        style="background-image: url('menu/Entree/3.jfif'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
 
-            
+                        <a href="entree.html" target="_blank">Entrée</a>
+                    </section>
 
-                <section class="item-card">
+                    <section class="item-card"
+                        style="background-image: url('menu/Plats/3.jpg'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
 
-                    <a href="entree.html" target="_blank">Entrée</a>
+                        <a href="plats.html" target="_blank">Plats</a>
+                    </section>
+
+                    <section class="item-card" style="background-image: url('menu/Dessert/1.jpg'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
+                        <a href="dessert.html" target="_blank">Dessert</a>
+                    </section>
+
+                    <section class="item-card"
+                        style="background-image: url('menu/Boissons/3.webp'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
+
+                        <a href="boissons.html" target="_blank">Boisson</a>
+
+                    </section>
+
                 </section>
-
-                <section class="item-card">
-
-                    <a href="plats.html" target="_blank">Plats</a>
-                </section>
-
-                <section class="item-card">
-                    <a href="dessert.html" target="_blank">Dessert</a>
-                </section>
-
-                <section class="item-card">
-
-                    <a href="boissons.html" target="_blank">Boisson</a>
-
-                </section>
-
-            </section>
 
             </div>
 
