--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
 
             <div>
-                <h2>Toutes les commandes</h2>
+                <h2 style="color: white;">Toutes les commandes</h2>
 
 
 
@@ -124,7 +124,7 @@
 
 
             <div>
-                <h2>Tous les stocks</h2>
+                <h2 style="color: white;">Tous les stocks</h2>
                 <table>
                     <thead>
                         <tr>
@@ -201,7 +201,7 @@
             <div>
 
                 <section id="middle" >
-                    <h2>Bienvenue sur le menu</h2>
+                    <h2 style="color: white;">Bienvenue sur le menu</h2>
 
 
                     <section class="item-card"
