--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <section class="item-card"
                         style="background-image: url('menu/Boissons/3.webp'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
 
-                        <a href="boissons.html" target="_blank">Boisson</a>
+                        <a href="boissons.html" target="_blank" style="color: white;">Boisson</a>
 
                     </section>
 
