--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 
         <div class="tab-indicator"></div>
 
-        <div class="tab-content" style="background-image: url('menu/restaurant/restaurant.png'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
+        <div class="tab-content" style="background-image: url('menu/restaurant/resaturant.jpg'); background-attachment: fixed; background-repeat: no-repeat; background-size: cover;">
 
             <div class="active">
 
                 <h2 style="color: white;">Vous êtes dans l'espace de la gérante</h2>
                 <section class="container">
 
-                    <span >
+                    <span style="color: white;">
                         Commandes :
                         02
                     </span>
 
-                    <span>
+                    <span style="color: white;">
                         Articles : 08
                     </span>
 
-                    <span>
+                    <span style="color: white;">
                         Menu : 04
                     </span>
 
@@ -107,7 +107,7 @@
                     </section>
                 </section>
 
-                <section class="table3">
+                <!-- <section class="table3">
 
                     <section class="orders__item">
 
@@ -117,7 +117,7 @@
                         <p>1 Mousse au chocolat</p>
                         <img src="img/table.png" width="90" alt="">
                     </section>
-                </section>
+                </section> -->
 
 
             </div>
